# docs

./: .dockerignore  .gitignore  .gitmodules  .markdownlint.json  .markdownlintignore  .md  .prettierignore  .rules  404.html  AGENTS.md  CLAUDE.md  DESIGN_SYSTEM_SUMMARY.md  Dockerfile.mcp  Makefile  README.md  _config.yml  astro-inline-svgs.mjs  astro.config.mjs  biome.json  ec.config.mjs  eslint.config.js  explanations.md  guides.md  index.html  integrations.md  lefthook.yml  llms-full.txt  llms-small.txt  llms.txt  markdoc.config.mjs  package.json  pnpm-lock.yaml  sitemap-0.xml  sitemap-index.xml  tenzir.yaml.example  test-broken.md  test-doc.md  test-file.js  tql.tmLanguage.json  tsconfig.json
changelog/: README.md  changelog.py  index.html  pyproject.toml
changelog/node/: 2020-01-31.md  2020-02-27.md  2020-03-26.md  2020-04-29.md  2020-10-29.md  2020-12-16.md  2021-02-24.md  2021-05-27.md  2021-07-29.md  2021-11-18.md  2021-12-16.md  index.html  next.md  v1-1-0.md  v1-1-2.md  v2-3-1.md  v2-4-1.md  v3-0-0.md  v3-0-2.md  v3-0-3.md  v4-1-0.md  v4-10-3.md  v4-12-2.md  v4-15-0.md  v4-15-1.md  v4-15-2.md  v4-17-0.md  v4-17-1.md  v4-18-0.md  v4-18-1.md  v4-18-2.md  v4-18-5.md  v4-19-0.md  v4-19-1.md  v4-19-2.md  v4-19-5.md  v4-2-0.md  v4-20-1.md  v4-20-3.md  v4-21-0.md  (+36 more)
changelog/platform/: index.html  v0-17-1.md  v0-17-2.md  v0-18-0.md  v0-18-1.md  v0-18-2.md  v0-20-0.md  v0-20-1.md  v1-0-0.md  v1-0-2.md  v1-0-3.md  v1-0-4.md  v1-0-8.md  v1-1-1.md  v1-1-2.md  v1-10-0.md  v1-10-1.md  v1-10-2.md  v1-10-3.md  v1-11-0.md  v1-11-1.md  v1-13-0.md  v1-14-1.md  v1-15-0.md  v1-16-1.md  v1-17-0.md  v1-17-4.md  v1-18-0.md  v1-19-0.md  (+14 more)
mcp/: README.md  pyproject.toml
synthesis/: README.md  pyproject.toml
(+16018 files in other folders)
