[tool.poetry]
name = "changelog"
version = "0.1.0"
description = "Generates MDX changelogs for Tenzir from Markdown fragments"
authors = ["Tenzir <engineering@tenzir.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
python-frontmatter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
