[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tenzir-docs-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=0.1.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.0",
    "pydantic>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tenzir_docs_mcp"]

[tool.mypy]
plugins = ["pydantic.mypy"]
